@@ -19,6 +19,7 @@ package org.keycloak.testsuite.federation.ldap;
 
 import org.jboss.logging.Logger;
 import org.junit.Assert;
+import org.junit.Assume;
 import org.junit.Before;
 import org.junit.ClassRule;
 import org.junit.FixMethodOrder;
@@ -94,12 +95,6 @@ public class LDAPGroupMapperSyncTest extends AbstractLDAPTest {
 
             LDAPUtils.addMember(ctx.getLdapProvider(), MembershipType.DN, LDAPConstants.MEMBER, "not-used", group1, group11);
             LDAPUtils.addMember(ctx.getLdapProvider(), MembershipType.DN, LDAPConstants.MEMBER, "not-used", group1, group12);
-
-            LDAPObject nonExistentChild = new LDAPObject();
-            LDAPDn nonExistentChildDn = group1.getDn().getParentDn();
-            nonExistentChildDn.addFirst(LDAPConstants.UID, "non-existent-child");
-            nonExistentChild.setDn(nonExistentChildDn);
-            LDAPUtils.addMember(ctx.getLdapProvider(), MembershipType.DN, LDAPConstants.MEMBER, "not-used", group1, nonExistentChild);
         });
     }
 
@@ -115,8 +110,7 @@ public class LDAPGroupMapperSyncTest extends AbstractLDAPTest {
         });
     }
 
-    @Test
-    public void test01_syncNoPreserveGroupInheritance() throws Exception {
+    private void testSyncNoPreserveGroupInheritance() throws Exception {
         testingClient.server().run(session -> {
             LDAPTestContext ctx = LDAPTestContext.init(session);
             RealmModel realm = ctx.getRealm();
@@ -143,7 +137,7 @@ public class LDAPGroupMapperSyncTest extends AbstractLDAPTest {
         testingClient.server().run(session -> {
             LDAPTestContext ctx = LDAPTestContext.init(session);
             ComponentModel mapperModel = LDAPTestUtils.getSubcomponentByName(ctx.getRealm(), ctx.getLdapModel(), "groupsMapper");
-            LDAPTestUtils.updateGroupMapperConfigOptions(mapperModel, GroupMapperConfig.PRESERVE_GROUP_INHERITANCE, "false");
+            LDAPTestUtils.updateConfigOptions(mapperModel, GroupMapperConfig.PRESERVE_GROUP_INHERITANCE, "false");
             ctx.getRealm().updateComponent(mapperModel);
 
         });
@@ -168,9 +162,9 @@ public class LDAPGroupMapperSyncTest extends AbstractLDAPTest {
             GroupLDAPStorageMapper groupMapper = LDAPTestUtils.getGroupMapper(mapperModel, ldapProvider, realm);
 
             // Assert groups are imported to keycloak. All are at top level
-            GroupModel kcGroup1 = KeycloakModelUtils.findGroupByPath(realm, "/group1");
-            GroupModel kcGroup11 = KeycloakModelUtils.findGroupByPath(realm, "/group11");
-            GroupModel kcGroup12 = KeycloakModelUtils.findGroupByPath(realm, "/group12");
+            GroupModel kcGroup1 = KeycloakModelUtils.findGroupByPath(session, realm, "/group1");
+            GroupModel kcGroup11 = KeycloakModelUtils.findGroupByPath(session, realm, "/group11");
+            GroupModel kcGroup12 = KeycloakModelUtils.findGroupByPath(session, realm, "/group12");
 
             Assert.assertEquals(0, kcGroup1.getSubGroupsStream().count());
 
@@ -189,15 +183,42 @@ public class LDAPGroupMapperSyncTest extends AbstractLDAPTest {
         testingClient.server().run(session -> {
             LDAPTestContext ctx = LDAPTestContext.init(session);
             ComponentModel mapperModel = LDAPTestUtils.getSubcomponentByName(ctx.getRealm(), ctx.getLdapModel(), "groupsMapper");
-            LDAPTestUtils.updateGroupMapperConfigOptions(mapperModel, GroupMapperConfig.PRESERVE_GROUP_INHERITANCE, "true");
+            LDAPTestUtils.updateConfigOptions(mapperModel, GroupMapperConfig.PRESERVE_GROUP_INHERITANCE, "true");
             ctx.getRealm().updateComponent(mapperModel);
 
         });
     }
 
+    @Test
+    public void test01_syncNoPreserveGroupInheritance() throws Exception {
+        testSyncNoPreserveGroupInheritance();
+    }
 
     @Test
-    public void test02_syncWithGroupInheritance() throws Exception {
+    public void test02_syncNoPreserveGroupInheritanceWithOneGroupMissing() throws Exception {
+        Assume.assumeFalse("AD does not allow missing DN in group members",
+                LDAPConstants.VENDOR_ACTIVE_DIRECTORY.equals(ldapRule.getConfig().get(LDAPConstants.VENDOR)));
+
+        testingClient.server().run(session -> {
+            // create a non-existent group first in group1
+            LDAPTestContext ctx = LDAPTestContext.init(session);
+            RealmModel realm = ctx.getRealm();
+            ComponentModel mapperModel = LDAPTestUtils.getSubcomponentByName(realm, ctx.getLdapModel(), "groupsMapper");
+            LDAPStorageProvider ldapProvider = LDAPTestUtils.getLdapProvider(session, ctx.getLdapModel());
+            GroupLDAPStorageMapper groupMapper = LDAPTestUtils.getGroupMapper(mapperModel, ldapProvider, realm);
+            LDAPObject group1 = groupMapper.loadLDAPGroupByName("group1");
+            LDAPObject nonExistentChild = new LDAPObject();
+            LDAPDn nonExistentChildDn = group1.getDn().getParentDn();
+            nonExistentChildDn.addFirst(LDAPConstants.UID, "non-existent-child");
+            nonExistentChild.setDn(nonExistentChildDn);
+            LDAPUtils.addMember(ctx.getLdapProvider(), MembershipType.DN, LDAPConstants.MEMBER, "not-used", group1, nonExistentChild);
+        });
+
+        testSyncNoPreserveGroupInheritance();
+    }
+
+    @Test
+    public void test03_syncWithGroupInheritance() throws Exception {
         testingClient.server().run(session -> {
             LDAPTestContext ctx = LDAPTestContext.init(session);
             RealmModel realm = ctx.getRealm();
@@ -218,11 +239,11 @@ public class LDAPGroupMapperSyncTest extends AbstractLDAPTest {
             LDAPTestAsserts.assertSyncEquals(syncResult, 3, 0, 0, 0);
 
             // Assert groups are imported to keycloak including their inheritance from LDAP
-            GroupModel kcGroup1 = KeycloakModelUtils.findGroupByPath(realm, "/group1");
-            Assert.assertNull(KeycloakModelUtils.findGroupByPath(realm, "/group11"));
-            Assert.assertNull(KeycloakModelUtils.findGroupByPath(realm, "/group12"));
-            GroupModel kcGroup11 = KeycloakModelUtils.findGroupByPath(realm, "/group1/group11");
-            GroupModel kcGroup12 = KeycloakModelUtils.findGroupByPath(realm, "/group1/group12");
+            GroupModel kcGroup1 = KeycloakModelUtils.findGroupByPath(session, realm, "/group1");
+            Assert.assertNull(KeycloakModelUtils.findGroupByPath(session, realm, "/group11"));
+            Assert.assertNull(KeycloakModelUtils.findGroupByPath(session, realm, "/group12"));
+            GroupModel kcGroup11 = KeycloakModelUtils.findGroupByPath(session, realm, "/group1/group11");
+            GroupModel kcGroup12 = KeycloakModelUtils.findGroupByPath(session, realm, "/group1/group12");
 
             Assert.assertEquals(2, kcGroup1.getSubGroupsStream().count());
 
@@ -244,8 +265,8 @@ public class LDAPGroupMapperSyncTest extends AbstractLDAPTest {
             LDAPTestAsserts.assertSyncEquals(syncResult, 0, 3, 0, 0);
 
             // Assert attributes changed in keycloak
-            kcGroup1 = KeycloakModelUtils.findGroupByPath(realm, "/group1");
-            kcGroup12 = KeycloakModelUtils.findGroupByPath(realm, "/group1/group12");
+            kcGroup1 = KeycloakModelUtils.findGroupByPath(session, realm, "/group1");
+            kcGroup12 = KeycloakModelUtils.findGroupByPath(session, realm, "/group1/group12");
             Assert.assertEquals("group1 - changed description", kcGroup1.getFirstAttribute(descriptionAttrName));
             Assert.assertNull(kcGroup12.getFirstAttribute(descriptionAttrName));
         });
@@ -253,7 +274,7 @@ public class LDAPGroupMapperSyncTest extends AbstractLDAPTest {
 
 
     @Test
-    public void test03_syncWithDropNonExistingGroups() throws Exception {
+    public void test04_syncWithDropNonExistingGroups() throws Exception {
         testingClient.server().run(session -> {
             LDAPTestContext ctx = LDAPTestContext.init(session);
             RealmModel realm = ctx.getRealm();
@@ -271,9 +292,9 @@ public class LDAPGroupMapperSyncTest extends AbstractLDAPTest {
             LDAPTestAsserts.assertSyncEquals(syncResult, 3, 0, 0, 0);
 
             // Assert groups are imported to keycloak including their inheritance from LDAP
-            GroupModel kcGroup1 = KeycloakModelUtils.findGroupByPath(realm, "/group1");
-            Assert.assertNotNull(KeycloakModelUtils.findGroupByPath(realm, "/group1/group11"));
-            Assert.assertNotNull(KeycloakModelUtils.findGroupByPath(realm, "/group1/group12"));
+            GroupModel kcGroup1 = KeycloakModelUtils.findGroupByPath(session, realm, "/group1");
+            Assert.assertNotNull(KeycloakModelUtils.findGroupByPath(session, realm, "/group1/group11"));
+            Assert.assertNotNull(KeycloakModelUtils.findGroupByPath(session, realm, "/group1/group12"));
 
             Assert.assertEquals(2, kcGroup1.getSubGroupsStream().count());
 
@@ -285,13 +306,13 @@ public class LDAPGroupMapperSyncTest extends AbstractLDAPTest {
             syncResult = new GroupLDAPStorageMapperFactory().create(session, mapperModel).syncDataFromFederationProviderToKeycloak(realm);
             LDAPTestAsserts.assertSyncEquals(syncResult, 0, 3, 0, 0);
 
-            Assert.assertNotNull(KeycloakModelUtils.findGroupByPath(realm, "/group1/group11"));
-            Assert.assertNotNull(KeycloakModelUtils.findGroupByPath(realm, "/group1/group12"));
-            Assert.assertNotNull(KeycloakModelUtils.findGroupByPath(realm, "/model1"));
-            Assert.assertNotNull(KeycloakModelUtils.findGroupByPath(realm, "/group1/model2"));
+            Assert.assertNotNull(KeycloakModelUtils.findGroupByPath(session, realm, "/group1/group11"));
+            Assert.assertNotNull(KeycloakModelUtils.findGroupByPath(session, realm, "/group1/group12"));
+            Assert.assertNotNull(KeycloakModelUtils.findGroupByPath(session, realm, "/model1"));
+            Assert.assertNotNull(KeycloakModelUtils.findGroupByPath(session, realm, "/group1/model2"));
 
             // Update group mapper to drop non-existing groups during sync
-            LDAPTestUtils.updateGroupMapperConfigOptions(mapperModel, GroupMapperConfig.DROP_NON_EXISTING_GROUPS_DURING_SYNC, "true");
+            LDAPTestUtils.updateConfigOptions(mapperModel, GroupMapperConfig.DROP_NON_EXISTING_GROUPS_DURING_SYNC, "true");
             realm.updateComponent(mapperModel);
 
             // Sync groups again from LDAP. Assert LDAP non-existing groups deleted
@@ -300,21 +321,21 @@ public class LDAPGroupMapperSyncTest extends AbstractLDAPTest {
             Assert.assertTrue(syncResult.getRemoved() == 2);
 
             // Sync and assert groups updated
-            Assert.assertNotNull(KeycloakModelUtils.findGroupByPath(realm, "/group1/group11"));
-            Assert.assertNotNull(KeycloakModelUtils.findGroupByPath(realm, "/group1/group12"));
-            Assert.assertNull(KeycloakModelUtils.findGroupByPath(realm, "/model1"));
-            Assert.assertNull(KeycloakModelUtils.findGroupByPath(realm, "/group1/model2"));
+            Assert.assertNotNull(KeycloakModelUtils.findGroupByPath(session, realm, "/group1/group11"));
+            Assert.assertNotNull(KeycloakModelUtils.findGroupByPath(session, realm, "/group1/group12"));
+            Assert.assertNull(KeycloakModelUtils.findGroupByPath(session, realm, "/model1"));
+            Assert.assertNull(KeycloakModelUtils.findGroupByPath(session, realm, "/group1/model2"));
         });
     }
 
 
     @Test
-    public void test04_syncNoPreserveGroupInheritanceWithLazySync() throws Exception {
+    public void test05_syncNoPreserveGroupInheritanceWithLazySync() throws Exception {
         // Update group mapper to skip preserve inheritance
         testingClient.server().run(session -> {
             LDAPTestContext ctx = LDAPTestContext.init(session);
             ComponentModel mapperModel = LDAPTestUtils.getSubcomponentByName(ctx.getRealm(), ctx.getLdapModel(), "groupsMapper");
-            LDAPTestUtils.updateGroupMapperConfigOptions(mapperModel, GroupMapperConfig.PRESERVE_GROUP_INHERITANCE, "false");
+            LDAPTestUtils.updateConfigOptions(mapperModel, GroupMapperConfig.PRESERVE_GROUP_INHERITANCE, "false");
             ctx.getRealm().updateComponent(mapperModel);
 
         });
@@ -338,18 +359,18 @@ public class LDAPGroupMapperSyncTest extends AbstractLDAPTest {
                     groupMapperConfig.getMembershipUserLdapAttribute(ldapProvider.getLdapIdentityStore().getConfig()), ldapGroup, johnLdap);
 
             // Assert groups not yet imported to Keycloak DB
-            Assert.assertNull(KeycloakModelUtils.findGroupByPath(realm, "/group1"));
-            Assert.assertNull(KeycloakModelUtils.findGroupByPath(realm, "/group11"));
-            Assert.assertNull(KeycloakModelUtils.findGroupByPath(realm, "/group12"));
+            Assert.assertNull(KeycloakModelUtils.findGroupByPath(session, realm, "/group1"));
+            Assert.assertNull(KeycloakModelUtils.findGroupByPath(session, realm, "/group11"));
+            Assert.assertNull(KeycloakModelUtils.findGroupByPath(session, realm, "/group12"));
 
             // Load user from LDAP to Keycloak DB
             UserModel john = session.users().getUserByUsername(realm, "johnkeycloak");
             Set<GroupModel> johnGroups = john.getGroupsStream().collect(Collectors.toSet());
 
             // Assert just those groups, which john was memberOf exists because they were lazily created
-            GroupModel group1 = KeycloakModelUtils.findGroupByPath(realm, "/group1");
-            GroupModel group11 = KeycloakModelUtils.findGroupByPath(realm, "/group11");
-            GroupModel group12 = KeycloakModelUtils.findGroupByPath(realm, "/group12");
+            GroupModel group1 = KeycloakModelUtils.findGroupByPath(session, realm, "/group1");
+            GroupModel group11 = KeycloakModelUtils.findGroupByPath(session, realm, "/group11");
+            GroupModel group12 = KeycloakModelUtils.findGroupByPath(session, realm, "/group12");
             Assert.assertNull(group1);
             Assert.assertNotNull(group11);
             Assert.assertNull(group12);
@@ -366,7 +387,7 @@ public class LDAPGroupMapperSyncTest extends AbstractLDAPTest {
         testingClient.server().run(session -> {
             LDAPTestContext ctx = LDAPTestContext.init(session);
             ComponentModel mapperModel = LDAPTestUtils.getSubcomponentByName(ctx.getRealm(), ctx.getLdapModel(), "groupsMapper");
-            LDAPTestUtils.updateGroupMapperConfigOptions(mapperModel, GroupMapperConfig.PRESERVE_GROUP_INHERITANCE, "true");
+            LDAPTestUtils.updateConfigOptions(mapperModel, GroupMapperConfig.PRESERVE_GROUP_INHERITANCE, "true");
             ctx.getRealm().updateComponent(mapperModel);
 
         });
@@ -374,7 +395,7 @@ public class LDAPGroupMapperSyncTest extends AbstractLDAPTest {
 
 
     @Test
-    public void test05SyncRestAPI() {
+    public void test06SyncRestAPI() {
         ComponentRepresentation groupMapperRep = findMapperRepByName("groupsMapper");
 
         try {
@@ -389,7 +410,7 @@ public class LDAPGroupMapperSyncTest extends AbstractLDAPTest {
     // KEYCLOAK-8253 - Test if synchronization of large number of LDAP groups takes linear time
     @Ignore("This test is not suitable for regular CI testing due to higher time / performance demand")
     @Test
-    public void test06_ldapGroupsSyncHasLinearTimeComplexity() throws Exception {
+    public void test07_ldapGroupsSyncHasLinearTimeComplexity() throws Exception {
         // Count of LDAP groups to test the duration of the sync operation. Defaults to 30k unless overridden via system property
         final int GROUPS_COUNT = (System.getProperties().containsKey(TEST_LDAP_GROUPS_SYNC_LINEAR_TIME_GROUPS_COUNT)) ?
                 Integer.valueOf(System.getProperty(TEST_LDAP_GROUPS_SYNC_LINEAR_TIME_GROUPS_COUNT)) : 30000;
@@ -406,7 +427,7 @@ public class LDAPGroupMapperSyncTest extends AbstractLDAPTest {
 
             // Set group mapper to skip preservation of inheritance to test group creation
             ComponentModel mapperModel = LDAPTestUtils.getSubcomponentByName(ctx.getRealm(), ctx.getLdapModel(), "groupsMapper");
-            LDAPTestUtils.updateGroupMapperConfigOptions(mapperModel, GroupMapperConfig.PRESERVE_GROUP_INHERITANCE, "false");
+            LDAPTestUtils.updateConfigOptions(mapperModel, GroupMapperConfig.PRESERVE_GROUP_INHERITANCE, "false");
             ctx.getRealm().updateComponent(mapperModel);
 
         });
@@ -428,7 +449,7 @@ public class LDAPGroupMapperSyncTest extends AbstractLDAPTest {
              *  created groups, existing as the result of (N-1)-th iteration are "just" updated.
              *  Also see NOTE: and the subsequent for loop, commented out, below for details.
              */
-            Long elapsedTime = new Long(0);
+            Long elapsedTime = Long.valueOf(0);
             for (int i = 1; i <= GROUPS_COUNT; i++) {
                 LDAPTestUtils.createLDAPGroup(session,
                                               appRealm,
